Bug 516654 Cannot scroll to horizontal continuously with Logitech (Logicool) mouse r=roc